testing/tests/ui/as-primitive-type.stderr
error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as 4567 }}
         |         ^ close to this token
         |
 --> tests/ui/as-primitive-type.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as ? }}
         |         ^ close to this token
         |
 --> tests/ui/as-primitive-type.rs:7:10
  |
7 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `u1234`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as u1234 }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `core`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as core::primitive::u32 }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:15:10
   |
15 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:9
  |
       1 | {{ 1234 as int32_t }}
         |         ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:19:10
   |
19 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `as` operator expects the name of a primitive type on its right-hand side, found `int32_t`
 --> <source attribute>:1:36
  |
       1 | {{ (1234 + 4 * 12 / 45675445 - 13) as int32_t }}
         |                                    ^ close to this token
         |
  --> tests/ui/as-primitive-type.rs:23:10
   |
23 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
